# SMOLTRACE

./: .env.example  .gitignore  .pre-commit-config.yaml  .pylintrc  404.html  CLEANUP_DESIGN.md  CLEANUP_IMPLEMENTATION_SUMMARY.md  CLEANUP_TESTS_SUMMARY.md  COMPLETE_FIX_SUMMARY.md  COST_TRACKING_FIX_SUMMARY.md  COVERAGE_PROGRESS.md  DATASET_ENRICHMENT_ANALYSIS.md  FINAL_SUMMARY.md  GPU_METRICS_DEFAULT_BEHAVIOR.md  GPU_METRICS_FIX.md  IMPLEMENTATION_COMPLETE.md  LICENSE  METRICS_AGGREGATION_SUMMARY.md  METRICS_COLUMNS_FIX_SUMMARY.md  METRICS_DATASET_FIX.md  METRICS_FLATTENING_SUMMARY.md  README.md  REMAINING_IMPLEMENTATION.md  SESSION_SUMMARY.md  SUCCESS_FIELD_FIX.md  TESTING_SUMMARY.md  TEST_COVERAGE_FINAL_REPORT.md  TEST_COVERAGE_STRATEGY.md  TEST_UPDATES_SUMMARY.md  analyze_datasets.py  changelog.md  contributions.md  create_ops_benchmark.py  debug_metrics_flattening.py  emissions.csv  index.html  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  (+11 more)
.claude/: settings.local.json
.github/workflows/: ci.yml  docs.yml  pre-release-check.yml  publish.yml  test.yml
community/changelog/: index.html
community/contributing/: index.html
docs/: index.md  llms.txt
docs/community/: changelog.md  contributing.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guides/: dataset-management.md  datasets.md  hf-jobs.md  leaderboard.md  output-formats.md  providers.md  running-evaluations.md  tools.md
docs/reference/: cli.md  gpu-metrics.md  python-api.md
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guides/dataset-management/: index.html
guides/datasets/: index.html
guides/hf-jobs/: index.html
search/: search_index.json
smoltrace/: __init__.py  cards.py  cli.py  core.py  main.py  otel.py  tools.py  utils.py
tests/: test_cards.py  test_cleanup.py  test_cleanup_cli.py  test_cli.py  test_copy_datasets.py  test_core.py  test_core_additional.py  test_dataset_card_upload.py  test_file_tools.py  test_final_coverage_push.py  test_main.py  test_metrics_dataset_creation.py  test_opensearch_exporter.py  test_otel.py  test_otel_additional.py  test_process_system_tools.py  test_text_processing_tools.py  test_tools.py  test_utils.py  test_utils_additional.py
(+21 files in other folders)
