[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["smoltrace"]

[project]
name = "smoltrace"
version = "0.0.1"
authors = [
    {name = "Kshitij Thakkar", email = "kshitijthakkar@rocketmail.com"}
]
description = "A comprehensive benchmarking and evaluation framework for smolagents."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "smolagents>=1.0.0",
    "datasets",
    "huggingface_hub",
    "opentelemetry-sdk",
    "genai-otel-instrument[openinference]",
    "duckduckgo-search",
]

[project.optional-dependencies]
gpu = ["genai-otel-instrument[gpu]", "nvidia-ml-py"]

[project.urls]
"Homepage" = "https://github.com/Mandark-droid/SMOLTRACE"
"Bug Tracker" = "https://github.com/Mandark-droid/SMOLTRACE/issues"
"Documentation" = "https://github.com/Mandark-droid/SMOLTRACE#readme"
"Changelog" = "https://github.com/Mandark-droid/SMOLTRACE/blob/main/CHANGELOG.md"


[project.scripts]
smoltrace-eval = "smoltrace.cli:main"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
